[project]
name = "stat"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "syhanjin", email = "2819469337@qq.com" }
]
dependencies = [
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
    "pyinstaller>=6.11.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/stat"]
